# EnoLandingPageBackend/ClientApp/projects/backend-api/src/lib/api/api.ts
@@ -7,13 +7,10 @@ export * from './admin.serviceInterface'
 export * from './data.service';
 import { DataService } from './data.service';
 export * from './data.serviceInterface'
-export * from './enoEngine.service';
-import { EnoEngineService } from './enoEngine.service';
-export * from './enoEngine.serviceInterface'
 export * from './scoreboardInfo.service';
 import { ScoreboardInfoService } from './scoreboardInfo.service';
 export * from './scoreboardInfo.serviceInterface'
 export * from './vulnbox.service';
 import { VulnboxService } from './vulnbox.service';
 export * from './vulnbox.serviceInterface'
-export const APIS = [AccountService, AdminService, DataService, EnoEngineService, ScoreboardInfoService, VulnboxService];
+export const APIS = [AccountService, AdminService, DataService, ScoreboardInfoService, VulnboxService];
