# EnoLandingPageBackend/ClientApp/swagger.json
@@ -7,9 +7,7 @@
   "paths": {
     "/api/Account/Login": {
       "get": {
-        "tags": [
-          "Account"
-        ],
+        "tags": ["Account"],
         "summary": "Login to the Portal.",
         "parameters": [
           {
@@ -30,9 +28,7 @@
     },
     "/api/Account/OAuth2Redirect": {
       "get": {
-        "tags": [
-          "Account"
-        ],
+        "tags": ["Account"],
         "parameters": [
           {
             "name": "redirectUri",
@@ -51,9 +47,7 @@
     },
     "/api/Account/Info": {
       "get": {
-        "tags": [
-          "Account"
-        ],
+        "tags": ["Account"],
         "responses": {
           "200": {
             "description": "Success",
@@ -80,9 +74,7 @@
     },
     "/api/Account/VpnConfig": {
       "get": {
-        "tags": [
-          "Account"
-        ],
+        "tags": ["Account"],
         "responses": {
           "200": {
             "description": "Success"
@@ -92,9 +84,7 @@
     },
     "/api/Account/CheckIn": {
       "post": {
-        "tags": [
-          "Account"
-        ],
+        "tags": ["Account"],
         "responses": {
           "200": {
             "description": "Success"
@@ -104,9 +94,7 @@
     },
     "/api/Admin/BootVm": {
       "get": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "parameters": [
           {
             "name": "adminSecret",
@@ -133,9 +121,7 @@
     },
     "/api/Admin/CtfJson": {
       "get": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "parameters": [
           {
             "name": "adminSecret",
@@ -154,9 +140,7 @@
     },
     "/api/Data/CtfInfo": {
       "get": {
-        "tags": [
-          "Data"
-        ],
+        "tags": ["Data"],
         "responses": {
           "200": {
             "description": "Success",
@@ -183,9 +167,7 @@
     },
     "/api/Data/Teams": {
       "get": {
-        "tags": [
-          "Data"
-        ],
+        "tags": ["Data"],
         "summary": "Get all Teams.",
         "responses": {
           "200": {
@@ -213,21 +195,7 @@
     },
     "/api/Data/IPs": {
       "get": {
-        "tags": [
-          "Data"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/api/EnoEngine": {
-      "get": {
-        "tags": [
-          "EnoEngine"
-        ],
+        "tags": ["Data"],
         "responses": {
           "200": {
             "description": "Success"
@@ -237,9 +205,7 @@
     },
     "/api/ScoreboardInfo/scoreboard.json": {
       "get": {
-        "tags": [
-          "ScoreboardInfo"
-        ],
+        "tags": ["ScoreboardInfo"],
         "summary": "Gets the current scoreboard.",
         "responses": {
           "200": {
@@ -267,50 +233,7 @@
     },
     "/api/ScoreboardInfo/scoreboard{roundId}.json": {
       "get": {
-        "tags": [
-          "ScoreboardInfo"
-        ],
-        "summary": "Gets the scoreboard of a given roundId.",
-        "parameters": [
-          {
-            "name": "roundId",
-            "in": "path",
-            "description": "Number of the round.",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": -1
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Scoreboard"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Scoreboard"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Scoreboard"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "ScoreboardInfo"
-        ],
+        "tags": ["ScoreboardInfo"],
         "summary": "Gets the scoreboard of a given roundId.",
         "parameters": [
           {
@@ -349,11 +272,49 @@
         }
       }
     },
+    "/api/ScoreboardInfo/scoreboard": {
+      "post": {
+        "tags": ["ScoreboardInfo"],
+        "summary": "Gets the scoreboard of a given roundId.\r\nThe round will be parsed from the JSON.",
+        "parameters": [
+          {
+            "name": "adminSecret",
+            "in": "query",
+            "description": "The admin secret for authenticating the request.",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Scoreboard"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Scoreboard"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/Scoreboard"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Vulnbox/StartVulnbox": {
       "post": {
-        "tags": [
-          "Vulnbox"
-        ],
+        "tags": ["Vulnbox"],
         "responses": {
           "200": {
             "description": "Success"
@@ -363,9 +324,7 @@
     },
     "/api/Vulnbox/ResetVulnbox": {
       "post": {
-        "tags": [
-          "Vulnbox"
-        ],
+        "tags": ["Vulnbox"],
         "responses": {
           "200": {
             "description": "Success"
@@ -377,29 +336,41 @@
   "components": {
     "schemas": {
       "CtfInfoMessage": {
+        "required": [
+          "checkInBeginTime",
+          "checkInEndTime",
+          "ctfEndTime",
+          "ctfStartTime",
+          "registrationCloseTime",
+          "title"
+        ],
         "type": "object",
         "properties": {
           "title": {
             "type": "string",
-            "description": "The Title of the CTF.",
-            "nullable": true
+            "description": "The Title of the CTF."
           },
-          "startTime": {
+          "ctfStartTime": {
             "type": "string",
             "description": "The StartTime of the CTF.",
             "format": "date-time"
           },
-          "registrationCloseOffset": {
+          "ctfEndTime": {
+            "type": "string",
+            "description": "The EndTime of the CTF.",
+            "format": "date-time"
+          },
+          "registrationCloseTime": {
             "type": "string",
             "description": "The Time until Teams have to be registred.",
             "format": "date-time"
           },
-          "checkInBeginOffset": {
+          "checkInBeginTime": {
             "type": "string",
             "description": "The Time when the checkin will be available.",
             "format": "date-time"
           },
-          "checkInEndOffset": {
+          "checkInEndTime": {
             "type": "string",
             "description": "The Time until Teams have to be checked in.",
             "format": "date-time"
@@ -409,19 +380,11 @@
         "description": "A DTO representing General Information about the CTF."
       },
       "LandingPageVulnboxStatus": {
-        "enum": [
-          "None",
-          "Creating",
-          "Created"
-        ],
+        "enum": ["None", "Creating", "Created"],
         "type": "string"
       },
       "Scoreboard": {
-        "required": [
-          "currentRound",
-          "services",
-          "teams"
-        ],
+        "required": ["currentRound", "services", "teams"],
         "type": "object",
         "properties": {
           "currentRound": {
@@ -487,12 +450,7 @@
         "additionalProperties": false
       },
       "ScoreboardService": {
-        "required": [
-          "firstBloods",
-          "flagVariants",
-          "serviceId",
-          "serviceName"
-        ],
+        "required": ["firstBloods", "flagVariants", "serviceId", "serviceName"],
         "type": "object",
         "properties": {
           "serviceId": {
