# EnoLandingPageBackend/Models/CtfInfoMessage.cs
@@ -2,6 +2,7 @@
 {
     using System;
     using System.Collections.Generic;
+    using System.ComponentModel.DataAnnotations;
     using System.Linq;
     using System.Threading.Tasks;
 
@@ -19,41 +20,55 @@
         /// <param name="registrationCloseOffset"></param>
         /// <param name="checkInBeginOffset"></param>
         /// <param name="checkInEndOffset"></param>
-        public CtfInfoMessage(string title, DateTime startTime, DateTime registrationCloseOffset, DateTime checkInBeginOffset, DateTime checkInEndOffset)
+        public CtfInfoMessage(string title, DateTime startTime, DateTime endTime, DateTime registrationCloseOffset, DateTime checkInBeginOffset, DateTime checkInEndOffset)
         {
             this.Title = title;
-            this.StartTime = startTime;
-            this.RegistrationCloseOffset = registrationCloseOffset;
-            this.CheckInBeginOffset = checkInBeginOffset;
-            this.CheckInEndOffset = checkInEndOffset;
+            this.CtfStartTime = startTime;
+            this.CtfEndTime = endTime;
+            this.RegistrationCloseTime = registrationCloseOffset;
+            this.CheckInBeginTime = checkInBeginOffset;
+            this.CheckInEndTime = checkInEndOffset;
         }
+
         /// <summary>
         /// The Title of the CTF.
         /// </summary>
+        [Required]
         public string Title { get; set; }
 
         /// <summary>
         /// The StartTime of the CTF.
         /// </summary>
-        public DateTime StartTime { get; set; }
+        [Required]
+        public DateTime CtfStartTime { get; set; }
+
+        /// <summary>
+        /// The EndTime of the CTF.
+        /// </summary>
+        /// <value></value>
+        [Required]
+        public DateTime CtfEndTime { get; set; }
 
         /// <summary>
         /// The Time until Teams have to be registred.
         /// </summary>
         /// <value></value>
-        public DateTime RegistrationCloseOffset {get; set; }
+        [Required]
+        public DateTime RegistrationCloseTime { get; set; }
 
         /// <summary>
         /// The Time when the checkin will be available. 
         /// </summary>
         /// <value></value>
-        public DateTime CheckInBeginOffset {get; set; }
+        [Required]
+        public DateTime CheckInBeginTime { get; set; }
 
         /// <summary>
         /// The Time until Teams have to be checked in.
         /// </summary>
         /// <value></value>
-        public DateTime CheckInEndOffset {get; set; }
+        [Required]
+        public DateTime CheckInEndTime { get; set; }
 
     }
 }
